[package]
name = "tailray"
version = "0.3.3"
edition = "2024"
authors = ["NotAShelf <raf@notashelf.dev>"]
license = "MIT"

[dependencies]
arboard = {version = "3.6.1", features = ["wl-clipboard-rs", "wayland-data-control"]}
ctrlc = "3.5.1"
env_logger = "0.11.8"
ksni = {version = "0.3.2", features = ["blocking"]}
log = "0.4.29"
notify-rust = {version = "4.11.7", default-features = false, features = ["d"]}
open = "5.3.3"
resvg = "0.45.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"
which = "8.0.0"
whoami = "1.6.1"
wl-clipboard-rs = "0.9.2"
