[package]
name = "tailray"
version = "0.3.4"
edition = "2024"
authors = ["NotAShelf <raf@notashelf.dev>"]
license = "MIT"

[dependencies]
arboard = {version = "3.6.1", features = ["wl-clipboard-rs", "wayland-data-control"]}
ctrlc = "3.5.1"
env_logger = "0.11.8"
log = "0.4.29"
muda = "0.17.1"
notify-rust = {version = "4.11.7", default-features = false, features = ["d"]}
open = "5.3.3"
resvg = "0.45.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
shlex = "1.3.0"
tempfile = "3.24.0"
thiserror = "2.0.17"
tray-icon = "0.21.3"
which = "8.0.0"
whoami = "2.0.1"
wl-clipboard-rs = "0.9.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
