[package]
edition = "2018"
name = "tailray-bin"
version = "0.1.0"
authors = ["d1t2 <dieterplex@gmail.com>"]

[dependencies]
clipboard = "0.5"
env_logger = "0.9"
ksni = "0.2"
log = "0.4"
notify-rust = {version = "4.5", default_features = false, features = ["d"]}
open = "2.1"
resvg = "0.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny-skia = "0.6"
usvg = "0.22"
which = "4.2"
