[package]
edition = "2018"
name = "tailray"
version = "0.2.0"
authors = [
    "d1t2 <dieterplex@gmail.com>",
    "NotAShelf <raf@notashelf.dev>"
]

[dependencies]
clipboard = "0.5"
env_logger = "0.11"
ksni = "0.2"
log = "0.4"
notify-rust = {version = "4.10", default_features = false, features = ["d"]}
open = "5.1.2"
resvg = "0.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny-skia = "0.6"
usvg = "0.22"
which = "6.0"
